Añadir consulta de Albumes y canciones.

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -99,6 +99,12 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-danger fw-bold dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consultas</a>
+                            <ul class="dropdown-menu bg-dark border-2 border-secondary">
+                                <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Albumes" asp-action="AlbumesYCanciones">Albumes y Canciones</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
