Aplicar patrón Repository.

--- a/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
+++ b/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Albumes Y Canciones</h1>
 
-<table class="table">
+<table class="table tabla-sin-orden">
     <thead>
         <tr>
             <th colspan="2">
@@ -21,7 +21,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Generos)
             </th>
-            <th>
+            <th class="text-center">
                 Nº canciones
             </th>
         </tr>
@@ -65,9 +65,11 @@
                     <th class="bg-dark bg-opacity-50 text-white">
                         @Html.DisplayNameFor(model => item.Canciones.First().Duracion)
                     </th>
-                    <th class="bg-dark bg-opacity-50 text-white">
+                    <th class="bg-dark bg-opacity-50 text-center text-white">
                         @Html.DisplayNameFor(model => item.Canciones.First().Single)
                     </th>
+                    <th class="bg-transparent border-bottom-0"></th>
+                    <th class="bg-transparent border-bottom-0"></th>
                 </tr>
             }
             else
@@ -77,6 +79,8 @@
                     <td class="text-danger fw-bold text-center" colspan="3">
                         Este album no contiene canciones
                     </td>
+                    <td class="bg-transparent border-bottom-0"></td>
+                    <td class="bg-transparent border-bottom-0"></td>
                 </tr>
             }
 
@@ -90,9 +94,11 @@
                     <td>
                         @Html.DisplayFor(modelItem => item2.Duracion)
                     </td>
-                    <td>
+                    <td class="text-center">
                         @Html.DisplayFor(modelItem => item2.Single)
                     </td>
+                    <td class="bg-transparent border-bottom-0"></td>
+                    <td class="bg-transparent border-bottom-0"></td>
                 </tr>
             }
         }
