--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- secondary menu -->
-        <nav class="secondary-menu fixed-top bg-dark text-white-50">
+        <nav class="secondary-menu bg-dark text-white-50">
             <div class="container">
                 <!-- secondary menu left link area -->
                 <div class="sm-left">
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- primary menu -->
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm fixed-top navbar-dark bg-dark border-bottom box-shadow mb-1">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-1">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img class="img-responsive" width="100" src="/img/logo/logo.png" alt="" />
