--- a/MvcWebMusica2/wwwroot/css/site.css
+++ b/MvcWebMusica2/wwwroot/css/site.css
@@ -97,7 +97,7 @@ body {
     opacity: 85%;
 }
 
-/*******************************/
+/******* submenus ***********/
 
 /* ============ desktop view ============ */
 @media all and (min-width: 992px) {
