--- a/MvcWebMusica2/Views/Albumes/Details.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Details.cshtml
@@ -34,6 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Fecha)
         </dd>
+        <dt class = "col-sm-2">
+            Nº Canciones
+        </dt>
+        <dd class = "col-sm-10">
+            @Model.Canciones.Count()
+        </dd>
     </dl>
 </div>
 <div>
