Modificaciones en repositorios.

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Generos" asp-action="Index">Géneros</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Funciones" asp-action="Index">Funciones</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="FuncionesArtistas" asp-action="Index">Funciones/Artistas</a></li>
-                                        <li><hr class="dropdown-divider"></li>
+                                        <li><hr class="dropdown-divider text-white"></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Representantes" asp-action="Index">Representantes</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Artistas" asp-action="Index">Artistas</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Canciones" asp-action="Index">Canciones</a></li>
@@ -92,7 +92,7 @@
                                     <ul class="submenu dropdown-menu bg-dark border-2 border-secondary">
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a></li>
-                                        <li><hr class="dropdown-divider"></li>
+                                        <li><hr class="dropdown-divider text-white"></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Paises" asp-action="Index">Paises</a></li>
                                         <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Ciudades" asp-action="Index">Ciudades</a></li>
                                     </ul>
