--- a/MvcWebMusica2/Views/Albumes/Delete.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Grupos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Grupos.Id)
+            @Html.DisplayFor(model => model.Grupos!.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -27,13 +27,19 @@
             @Html.DisplayNameFor(model => model.Generos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Id)
+            @Html.DisplayFor(model => model.Generos!.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Fecha)
+        </dd>
+        <dt class="col-sm-2">
+            Nº Canciones
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Canciones.Count()
         </dd>
     </dl>
     
