--- a/MvcWebMusica2/Views/Albumes/Details.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Grupos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Grupos.Nombre)
+            @Html.DisplayFor(model => model.Grupos!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Generos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
+            @Html.DisplayFor(model => model.Generos!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha)
