--- a/MvcWebMusica2/Views/Artistas/Details.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Details.cshtml
@@ -26,19 +26,19 @@
             @Html.DisplayNameFor(model => model.Ciudades)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ciudades.Nombre)
+            @Html.DisplayFor(model => model.Ciudades!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Grupos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Grupos.Nombre)
+            @Html.DisplayFor(model => model.Grupos!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Generos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
+            @Html.DisplayFor(model => model.Generos!.Nombre)
         </dd>
     </dl>
 </div>
