--- a/MvcWebMusica2/Views/Canciones/Delete.cshtml
+++ b/MvcWebMusica2/Views/Canciones/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Albumes)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Albumes.Nombre)
+            @Html.DisplayFor(model => model.Albumes!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Single)
