--- a/MvcWebMusica2/Views/Canciones/Index.cshtml
+++ b/MvcWebMusica2/Views/Canciones/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Duracion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Albumes.Nombre)
+                @Html.DisplayFor(modelItem => item.Albumes!.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Single)
