--- a/MvcWebMusica2/Views/Ciudades/Delete.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Paises)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paises.Nombre)
+            @Html.DisplayFor(model => model.Paises!.Nombre)
         </dd>
     </dl>
     
