--- a/MvcWebMusica2/Views/Ciudades/Details.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Paises)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paises.Id)
+            @Html.DisplayFor(model => model.Paises!.Id)
         </dd>
     </dl>
 </div>
