--- a/MvcWebMusica2/Views/Conciertos/Details.cshtml
+++ b/MvcWebMusica2/Views/Conciertos/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Giras)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Giras.Nombre)
+            @Html.DisplayFor(model => model.Giras!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha)
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Ciudades)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ciudades.Nombre)
+            @Html.DisplayFor(model => model.Ciudades!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Direccion)
