--- a/MvcWebMusica2/Views/Empleados/Delete.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Roles)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Roles.Descripcion)
+            @Html.DisplayFor(model => model.Roles!.Descripcion)
         </dd>
     </dl>
     
