--- a/MvcWebMusica2/Views/Giras/Index.cshtml
+++ b/MvcWebMusica2/Views/Giras/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Grupos.Nombre)
+                @Html.DisplayFor(modelItem => item.Grupos!.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaInicio)
