--- a/MvcWebMusica2/Views/Grupos/Delete.cshtml
+++ b/MvcWebMusica2/Views/Grupos/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Generos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
+            @Html.DisplayFor(model => model.Generos!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaCreacion)
@@ -39,13 +39,13 @@
             @Html.DisplayNameFor(model => model.Ciudades)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ciudades.Nombre)
+            @Html.DisplayFor(model => model.Ciudades!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Representantes)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Representantes.NombreCompleto)
+            @Html.DisplayFor(model => model.Representantes!.NombreCompleto)
         </dd>
     </dl>
     
