--- a/MvcWebMusica2/Views/Representantes/Details.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Ciudades)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ciudades.Nombre)
+            @Html.DisplayFor(model => model.Ciudades!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Identificacion)
