--- a/MvcWebMusica2/Views/Representantes/Index.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ciudades.Nombre)
+                @Html.DisplayFor(modelItem => item.Ciudades!.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Identificacion)
