--- a/MvcWebMusica2/Views/VideoClips/Details.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Canciones)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Canciones.Titulo)
+            @Html.DisplayFor(model => model.Canciones!.Titulo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha)
