--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Details.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.VideoClips)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VideoClips.Canciones)
+            @Html.DisplayFor(model => model.VideoClips!.Canciones)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Plataformas)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Plataformas.Nombre)
+            @Html.DisplayFor(model => model.Plataformas!.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.url)
