--- a/MvcWebMusica2/Views/Albumes/Details.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Details.cshtml
@@ -38,7 +38,7 @@
             Nº Canciones
         </dt>
         <dd class = "col-sm-10">
-            @Model.Canciones.Count()
+            @Model.Canciones.Count
         </dd>
     </dl>
 </div>
