--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link href="~/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/css/datatables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MvcWebMusica2.styles.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="~/MvcWebMusica2.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
