--- a/MvcWebMusica2/Views/Albumes/Index.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Fecha)
             </td>
             <td class="text-center">
-                @item.Canciones.Count()
+                @item.Canciones.Count
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square" title="Editar"></i></a> |
